k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-app
  labels:
    app: calendar-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar-app
  template:
    metadata:
      labels:
        app: calendar-app
    spec:
      containers:
        - name: calendar-app
          image: ghcr.io/brampage/io-wokshop-ship-zero-to-hero:latest
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10 # wait 10s before first check
            periodSeconds: 10 # check every 10s
            timeoutSeconds: 3 # allow up to 3s response time
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5 # usually smaller than liveness
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            limits:
              cpu: "1000m"
              memory: "1024Mi"
            requests:
              cpu: "300m"
              memory: "300Mi"
